Intro hero finalised

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,1 +1,8 @@
 @import '~bulma/bulma';
+@import "~font-awesome/css/font-awesome.min.css";
+
+@import '_variables';
+@import '_mixins';
+
+@import '_general.scss';
+@import '_landing.scss';
