Different font-awesome path

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,7 @@
 @import '~bulma/bulma';
-@import "~font-awesome/css/font-awesome.min.css";
+
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
 
 @import '_variables';
 @import '_mixins';
