switching to vue-awesome for icons

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,7 +1,7 @@
 @import '~bulma/bulma';
 
-$fa-font-path: "~font-awesome/fonts";
-@import "~font-awesome/scss/font-awesome";
+//$fa-font-path: "~font-awesome/fonts";
+//@import "~font-awesome/scss/font-awesome";
 
 @import '_variables';
 @import '_mixins';
