--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,9 +1,7 @@
-@import '~bulma/bulma';
-
-//$fa-font-path: "~font-awesome/fonts";
-//@import "~font-awesome/scss/font-awesome";
-
+@import "~bulma/sass/utilities/initial-variables";
 @import '_variables';
+@import "~bulma/bulma";
+
 @import '_mixins';
 
 @import '_general.scss';
