--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -54,3 +54,13 @@
   width: 100%;
   height: 100%;
 }
+
+@mixin overlay-base() {
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width: 100%;
+  pointer-events: none;
+}
