Removing scroll on logo

--- a/src/assets/sass/_landing.scss
+++ b/src/assets/sass/_landing.scss
@@ -39,6 +39,7 @@
       color: $brand-color-3;
       font-size: 2rem;
       margin-top: 7px;
+      overflow: hidden;
       span {
         color: $brand-color-1;
       }
