Adding draft of FAQ's & Footer section

--- a/src/assets/sass/_general.scss
+++ b/src/assets/sass/_general.scss
@@ -1,10 +1,50 @@
+/*
 a, .nav-item a:not(.button), a.nav-item:not(.button) {
   color: $text-color;
   &:hover {
     color:rgba(0,0,0,0.5);
   }
 }
+*/
+
+a, .nav-item a:not(.button), a.nav-item:not(.button) {
+  color: $brand-color-2;
+  &:hover {
+    color:lighten($brand-color-2, 10%);
+  }
+}
 
 .button {
   font-weight: 600;
+  .fa {
+    margin-right: 6px;
+  }
+  .fa-end {
+    margin-right: 0px!important;
+    margin-left: 6px;
+  }
+}
+
+.social {
+  .columns {
+    a {
+      text-align: center;
+      float: left;
+      width: 50px;
+      height: 50px;
+      border: 3px solid $brand-color-3;
+      @include rounded(100%);
+      .fa {
+        font-size: 20px;
+        line-height: 45.5px;
+        color: $brand-color-3;
+      }
+      &:hover {
+        background-color: $brand-color-3;
+        .fa {
+          color: white;
+        }
+      }
+    }
+  }
 }
