--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -44,6 +44,13 @@
   }
 }
 
+@mixin animation($time: 0.12s, $ease: ease-in-out) {
+  transition: all $time $ease;
+  -webkit-transition: all $time $ease;
+  -moz-transition: all $time $ease;
+  -o-transition: all $time $ease;
+}
+
 @mixin content-full() {
   content: "";
   position: absolute;
